--- a/public/signup.html
+++ b/public/signup.html
@@ -87,6 +87,7 @@
     </div>
 
     <script src="signup.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"></script>
 
 </body>
 </html>
