--- a/public/signup.html
+++ b/public/signup.html
@@ -88,6 +88,7 @@
 
     <script src="signup.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"></script>
+    <a href="/login.html">login Now</a>
 
 </body>
 </html>
