--- a/public/homePage.html
+++ b/public/homePage.html
@@ -39,8 +39,8 @@
               data-bs-target="#loginModal">Login</button>
           </div>
         </div>
-        <div class="col-lg-5 order-1 order-lg-2 hero-img">
-          <img src="img/hero-img.png" class="img-fluid" alt="chat illustration">
+        <div class="col-lg-5 order-1 order-lg-2 mario">
+          <img src="img/mario.png" class="img-fluid" alt="chat illustration">
         </div>
       </div>
     </div>
