--- a/public/chatPage.html
+++ b/public/chatPage.html
@@ -18,9 +18,9 @@
         <div class="narrow-chat-container">
             <div class="chat-header d-flex justify-content-between align-items-center mb-3">
                 <div class="d-flex flex-column">
-                    <h1 class="mb-0" id="welcomeMsgNarrow">Groups</h1>
+                    <h1 class="mb-0" id="welcomeMsgNarrow">Groups created</h1>
                 </div>
-                <button id="createGroupBtn" class="btn logout-btn">Create Group</button>
+                <button id="createGroupBtn" class="btn logout-btn">Create a Group</button>
             </div>
 
             <div class="group-list" id="groupList">
@@ -32,7 +32,7 @@
         <div class="chat-container flex-grow-1">
             <div class="chat-header d-flex justify-content-between align-items-center mb-3">
                 <div class="d-flex flex-column">
-                    <h1 class="mb-0" id="welcomeMsg">Welcome User</h1>
+                    <h1 class="mb-0" id="welcomeMsg">Welcome To The Chat Page</h1>
                 </div>
                 <div class="d-flex align-items-center">
                     <div class="dropdown me-2">
@@ -42,8 +42,8 @@
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <li><a class="dropdown-item" id="normalChatBtn" href="#">Normal Chat</a></li>
-                            <li><a class="dropdown-item" id="inviteBtn" href="#">Add member</a></li>
-                            <li><a class="dropdown-item" id="removeUserBtn" href="#">Remove Member</a></li>
+                            <li><a class="dropdown-item" id="inviteBtn" href="#">Add user</a></li>
+                            <li><a class="dropdown-item" id="removeUserBtn" href="#">Remove user</a></li>
                             <li><a class="dropdown-item" id="promoteBtn" href="#">Make Admin</a></li>
                             <li><a class="dropdown-item" id="demoteBtn" href="#">Remove Admin</a></li>
                             <li><a class="dropdown-item" id="leaveGroupBtn" href="#">Leave Group</a></li>
